# dual_arm_gazebo_sim

./: .gitignore
src/dual_arm_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dual_arm_bringup/config/: params.yaml  rviz_dual.rviz
src/dual_arm_bringup/dual_arm_bringup/: franka_color_tracker.py  motion_pattern_generator.py  object_tracker.py  robot_a_pick_place.py  spawn_cube.py
src/dual_arm_bringup/launch/: dual_arm_sim.launch.py  pick_track.launch.py
src/dual_arm_bringup/urdf/: franka_camera.xacro
src/dual_arm_bringup/worlds/: cynlr.world
